added chapter 1 and chapter 2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,31 @@
 site_name: Introduction to Statistics at DTU solutions
 theme:
         name: material
+        palette:
+                primary: red
+                accent: red
+markdown_extensions:
+  - pymdownx.arithmatex
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tabbed
+  - pymdownx.tilde
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML
+nav:
+        - Preface: index.md
+        - Chapter 1: chapter_1.md
+        - Chapter 2: chapter_2.md
