--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ theme:
                 primary: red
                 accent: red
 markdown_extensions:
+  - attr_list
   - pymdownx.arithmatex
   - pymdownx.betterem:
       smart_enable: all
