some visual adjustments

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,3 +31,4 @@ nav:
         - 1 Descriptive Statistics: chapter_1.md
         - 2 Probability Discrete: chapter_2_1.md
         - 2 Probability Continuous: chapter_2_2.md
+        - 3 Confidence Intervals: chapter_3_1.md
