--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,3 +32,4 @@ nav:
         - 2 Probability Discrete: chapter_2_1.md
         - 2 Probability Continuous: chapter_2_2.md
         - 3 Confidence Intervals: chapter_3_1.md
+        - 3 Hypothesis Testing: chapter_3_2.md 
