some visual adjustments chapter 6

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,4 +36,6 @@ nav:
         - 3 Analysis of Two samples: chapter_3_3.md
         - 4 Simulation Methods: chapter_4_1.md
         - 5 Simple Linear Regression: chapter_5.md
+        - 6 Multiple Linear Regression: chapter_6.md
+
 
