--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,11 @@
-site_name: Introduction to Statistics at DTU solutions
+site_name: Introduction to Statistics
 theme:
         name: material
         palette:
                 primary: red
                 accent: red
+        features:
+                - tabs
 markdown_extensions:
   - attr_list
   - pymdownx.arithmatex
@@ -29,15 +31,19 @@ markdown_extensions:
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML
 nav:
-        - Preface: index.md
-        - 1 Descriptive Statistics: chapter_1.md
-        - 2 Probability Discrete: chapter_2_1.md
-        - 2 Probability Continuous: chapter_2_2.md
-        - 3 Confidence Intervals: chapter_3_1.md
-        - 3 Hypothesis Testing: chapter_3_2.md
-        - 3 Analysis of Two samples: chapter_3_3.md
-        - 4 Simulation Methods: chapter_4_1.md
-        - 5 Simple Linear Regression: chapter_5.md
-        - 6 Multiple Linear Regression: chapter_6.md
-        - 7 Categorical and Count Data: chapter_7.md 
+        - Book solutions:
+                - Preface: index.md
+                - 1 Descriptive Statistics: chapter_1.md
+                - 2 Probability Discrete: chapter_2_1.md
+                - 2 Probability Continuous: chapter_2_2.md
+                - 3 Confidence Intervals: chapter_3_1.md
+                - 3 Hypothesis Testing: chapter_3_2.md
+                - 3 Analysis of Two samples: chapter_3_3.md
+                - 4 Simulation Methods: chapter_4_1.md
+                - 5 Simple Linear Regression: chapter_5.md
+                - 6 Multiple Linear Regression: chapter_6.md
+                - 7 Categorical and Count Data: chapter_7.md
+                - 8 Grouped Data(one-way ANOVA): chapter_8.md
+        - Notes:
+                - testnotes: test.md 
 
